# universaldownloader-api

./: .gitignore  CURL.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  publish-ghcr.yml  watch-yt-dlp.yml
