[project]
name = "video-download-api"
version = "1.0.0"
description = "FastAPI server for downloading videos from various platforms using yt-dlp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.40.0",
    "yt-dlp[curl-cffi,default]>=2026.2.4",
]
